--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <%- include("header",{type:''}) %>
 <div class="container">
-	<form style="width:100%" class="form create" method="post">
-		<div>
+	<form style="width:100%" method="post">
+		<div class="title-create">
 			<label>标题：</label>
 			<input placeholder="标题" type="text" name="title" value="<%- postsTitle %>">
 		</div>
@@ -18,6 +18,7 @@
 <script>
 	 let E = window.wangEditor
         let editor = new E("#div1")
+		editor.config.height = 250
         // 或者 const editor = new E(document.getElementById('div1'))
         editor.create();
 	$('.submit').click(function(){
