--- a/views/selfPosts.ejs
+++ b/views/selfPosts.ejs
@@ -1,5 +1,6 @@
 <%- include("header",{type:'my'}) %>
 	<div class="container">
+		<div><label style="font-size: 20px;">文章列表</label></div>
 		<ul class="posts-list">
 			<% posts.forEach(function(res,index){ %>
 				<li>
@@ -8,19 +9,14 @@
 						<span><img class="Icon" src="/icons/pv.png" alt="pv"/><%= res.pv %></span><span></span><span class="gap"></span>
 						<span><img class="Icon" src="/icons/support.png" alt="support"/>0</span>
 					</div> -->
-					<!-- <div class="comment_pv">
-						<span><%= res.moment %></span>
-					</div> -->
+					
 					<a href="/posts/<%= res.id %>">
-						<div class="title">
-							<%- index+1 %>
+						<div class="title">	
 							<!-- <img class="userAvator" src="images/<%= res.avator %>"  alt="avator">  -->
-							<%- res.title %>
-						</div>
-						<!-- <div class="content markdown">
-							<%- res.content %>
-						</div> -->
-					</a>
+							<span class="title_pv_define"><%- res.title %></span>
+							<span class="comment_pv_define"><%= res.moment %></span>
+						</div>				
+					</a>					
 				</li>
 			<% }) %>
 		</ul>
